Тесты для 4 лабы
Для каждой функции сортировки, кроме treeSort, создано по 2 теста - на нормальный массив и на массив из 1 элемента. Также присутствуют тесты для остальных функций, нуждающихся в них.

--- a/ArraySortsTests/ArraySortsTests.vcxproj
+++ b/ArraySortsTests/ArraySortsTests.vcxproj
@@ -162,7 +162,12 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="unittest1.cpp" />
+    <ClCompile Include="ArraySortsTests.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\lab4\lab4.vcxproj">
+      <Project>{278c3ce9-e892-43ab-8c4b-3b0c57f11033}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
