--- a/lab4/lab4.vcxproj
+++ b/lab4/lab4.vcxproj
@@ -39,7 +39,7 @@
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
@@ -76,7 +76,11 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>C:\Курс_2\АиСтрД\AISTRD3SEM\lab3;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
+    <Link>
+      <AdditionalLibraryDirectories>C:\Курс_2\АиСтрД\AISTRD3SEM\lab3;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+    </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -115,12 +119,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\lab3\BinaryTree.cpp" />
     <ClCompile Include="ArraySorts.cpp" />
     <ClCompile Include="BasicArrayFunctionsForLab4.cpp" />
     <ClCompile Include="ConsoleOutput.cpp" />
     <ClCompile Include="MainForLab4.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\lab3\BinaryTree.h" />
+    <ClInclude Include="..\lab3\Iterator.h" />
     <ClInclude Include="ArraySorts.h" />
     <ClInclude Include="BasicArrayFunctionsForLab4.h" />
     <ClInclude Include="ConsoleOutput.h" />
