--- a/lab4/lab4.vcxproj
+++ b/lab4/lab4.vcxproj
@@ -39,7 +39,7 @@
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
@@ -131,6 +131,11 @@
     <ClInclude Include="ArraySorts.h" />
     <ClInclude Include="BasicArrayFunctionsForLab4.h" />
     <ClInclude Include="ConsoleOutput.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\lab3\lab3.vcxproj">
+      <Project>{bd9f67f3-ab83-4f05-8bf2-8957b9e0bec8}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
